fixed minor spacing issues and css that was in the html.

--- a/codeup-design-site.css
+++ b/codeup-design-site.css
@@ -39,147 +39,181 @@ hr {
     border-bottom: 1px solid gray;
 }
 
+/*for large and xl screens*/
 @media screen and (min-width: 992px) {
     .logo {
         margin: -2em 1em -2em 0em;
     }
+
     #navbarNav {
         justify-content: flex-end;
     }
+
     #head-nav-link {
         padding: 0em 1em;
     }
-    .navbar-brand  {
+
+    .navbar-brand {
         font-size: 2em;
         font-weight: lighter;
     }
+
     #stayMiddle {
-        max-width: 75%;
+        width: 75%;
     }
+
     #first-grid {
         padding: 4em 0em 2em 0em;
     }
+
     #tab-circles-group {
         justify-content: center;
         margin: 2em 0em;
     }
+
     #circle-img {
         padding: 0em 2em;
     }
-    hr {
-        width: 75%;
+
+    #hr-container {
+        width: 90%;
+        margin-bottom: 3em;
+    }
+
+    /*original bottom of lg and xl css styling. assuming remainder of this css should have been inside curly brace*/
+
+    .left-right-container {
+        display: flex;
+        /*max-width: 1000px;*/
+        /*max-width: 75%;*/
+        flex-wrap: wrap;
+        padding: 2em;
+    }
+
+    .left-container {
+        width: 60%;
+        flex: 0 0 60%;
+
+    }
+
+    .featured-work {
+        font-size: 10px;
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .selected-work {
+        width: 100%;
+        margin: 15px;
+        flex: 0 0 42%;
+    }
+
+    .featured-img {
+        width: 100%;
+    }
+
+    .featured-bottom-line {
+        /* display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 5px; */
+        margin-top: 5px;
+    }
+
+    .featured-title {
+        /* flex: 0 0 70%; */
+        display: inline;
+        line-height: 18px;
+    }
+
+    .featured-icons {
+        display: flex;
+        float: right;
+        line-height: 18px;
+
+        /* justify-content: space-around; */
+        /* flex: 0 0 20%; */
+    }
+
+    .featured-icon {
+        height: 18px;
+        width: 18px;
+        border-radius: 50%;
+        margin-left: 3px;
+        text-align: center;
+    }
+
+    .orange {
+        background-color: #E6563B;
+    }
+
+    .yellow {
+        background-color: #DEA03D;
+    }
+
+    .green {
+        background-color: #7CB06C;
+    }
+
+    .blue {
+        background-color: #00ABA9;
+    }
+
+    .right-container {
+        /*max-width: 450px;*/
+        max-width: 40%;
+        /*margin-top: 15px;*/
+        flex: 0 0 40%;
+    }
+
+    .posts {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    .post {
+        display: flex;
+        padding: 15px 0;
+    }
+
+    .post-image img {
+        width: 70px;
+        height: 55px;
+        flex: 0 0 33%;
+    }
+
+    .post-title {
+        padding-left: 10px;
+        font-weight: bolder;
+        flex: 0 0 65%;
+    }
+
+    .tweets {
+        display: flex;
+        align-items: center;
+        padding-top: 20px;
+    }
+
+    .fa-twitter {
+        color: #1DA1F2;
+    }
+
+    .tweet {
+        padding-left: 10px;
+        font-weight: bolder;
+    }
+    #sub-section-title {
+        margin-bottom: 2em;
+    }
+    #circle-img {
+        box-sizing: unset;
+        height: 105px;
+        width: 105px;
     }
 }
 
-.left-right-container {
-    display: flex;
-    max-width: 1000px;
-    flex-wrap: wrap;
-}
 
-.left-container {
-    width: 450px;
-    flex: 0 0 60%;
+@media screen and (min-width: 768px) and (max-width: 991px) {
 
 }
-.featured-work {
-    font-size: 10px;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.selected-work {
-    width: 100%;
-    margin: 15px;
-    flex: 0 0 42%;
-}
-
-.featured-img {
-    width: 100%;
-}
-
-.featured-bottom-line {
-    /* display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 5px; */
-    margin-top: 5px;
-}
-
-.featured-title {
-    /* flex: 0 0 70%; */
-    display: inline;
-    line-height: 18px;
-
-
-}
-
-.featured-icons {
-    display: flex;
-    float: right;
-    line-height: 18px;
-
-    /* justify-content: space-around; */
-    /* flex: 0 0 20%; */
-}
-
-.featured-icon {
-    height: 18px;
-    width: 18px;
-    border-radius: 50%;
-    margin-left: 3px;
-    text-align: center;
-}
-
-.orange {background-color: #E6563B;}
-.yellow {background-color: #DEA03D;}
-.green {background-color: #7CB06C;}
-.blue {background-color: #00ABA9;}
-
-.right-container {
-    max-width: 450px;
-    margin-top: 15px;
-    flex: 0 0 40%;
-}
-.posts {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.post {
-    display: flex;
-    padding: 15px 0;
-}
-
-.post-image img {
-    width: 70px;
-    height: 55px;
-    flex: 0 0 33%;
-}
-
-.post-title {
-    padding-left: 10px;
-    font-weight: bolder;
-    flex: 0 0 65%;
-}
-
-.tweets {
-    display: flex;
-    align-items: center;
-    padding-top: 20px;
-}
-
-.fa-twitter {
-    color: #1DA1F2;
-}
-
-.tweet {
-    padding-left: 10px;
-    font-weight: bolder;
-}
-
-
-
-
-
 
